--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2)
 add_library(game
         Vector2.cpp
         Vector2.h
+        Game.cpp
+        Game.h
 )
 
 target_link_libraries(game SDL2::SDL2)
